samples/_failures_safe/1761670237_c9be50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdae2ca4.c: In function ‘main’:
./samples/SAFE/__tmp_bdae2ca4.c:168:20: error: expected ‘;’ at end of input
  168 |     calculate_stats
      |                    ^
      |                    ;
./samples/SAFE/__tmp_bdae2ca4.c:168:5: error: expected declaration or statement at end of input
  168 |     calculate_stats
      |     ^~~~~~~~~~~~~~~
